fix sorting by due date

Since this method returned a QString instead of a QDate the sorting was
according to the textual date representation. So, basically Fri, Mon,
Sat, Sun, Thu, Tue, Wed. This must return a QDate to function properly.
Formatting the QDate for display must be done in the Delegate.

BUG: 292951